--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">iData输入法</string>
-    <string name="ime_name">iData输入法</string>
-    <string name="ime_settings_activity_name">iData输入法</string>
+    <string name="app_name">蓝牙输入法</string>
+    <string name="ime_name">输入法</string>
+    <string name="ime_settings_activity_name">输入法</string>
+    <string name="ime_connect_activity_test">输入法测试</string>
     <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
     <string name="version">1.0.0</string>
 
@@ -32,7 +33,7 @@
     <string name="setting_prediction_key">setting_prediction_key</string>
     <string name="setting_switch_key">setting_switch_key</string>
     <string name="setting_advanced_key">setting_advanced_key</string>
-    <string name="setting">iData输入法</string>
+    <string name="setting">输入法</string>
     <string name="setting_sound_key_title">按键声音</string>
     <string name="setting_vibrate_title">按键震动</string>
     <string name="setting_prediction_title">联想输入</string>
@@ -61,4 +62,12 @@
 
     <string name="connect">连接设备</string>
     <string name="discoverable">允许发现</string>
+    
+    <string name="Devices">设备</string>
+    <string name="StartScan">开启扫描</string>
+    <string name="StartBluetooth">连接蓝牙</string>
+    <string name="StopBluetooth">断开连接</string>
+    <string name="Function">功能</string>
+    <string name="gs_about">关于</string>
+    <string name="key_cn_symbol">ALT</string>
 </resources>
