自定义键盘

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="Function">功能</string>
     <string name="gs_about">关于</string>
     <string name="key_cn_symbol">ALT</string>
+    <string name="key_cn_usb">USB</string>
 </resources>
